Starting to fill in bootcamp page

--- a/index.html
+++ b/index.html
@@ -1,32 +1,18 @@
 ---
 layout: bootcamp
 root: .
-venue: Euphoric State University
-address: 123 College Street, Euphoria
+venue: New York University
+address: New York, NY
 country: United-States
-humandate: Feb 17-18, 2020
+humandate: Mar 17-18, 2013
 humantime: 9:00 am - 4:30 pm
-startdate: 2020-06-17
-enddate: 2020-06-18
-latlng: 41.7901128,-87.6007318
+startdate: 2014-03-17
+enddate: 2014-03-18
+latlng: 40.729513,-73.996461
 registration: restricted
-instructor: ["Grace Hopper", "Alan Turing"]
+instructor: ["Sarah Supp", "Tracy Teal", "Alex Viana"]
 contact: admin@software-carpentry.org
 ---
-<div align="center">
-  <p><strong><em>
-      This page is a template for bootcamp home pages.
-      <br/>
-      Please see
-      <a href="https://github.com/swcarpentry/bc">https://github.com/swcarpentry/bc</a>
-      for instructions on how to create
-      a repository for your bootcamp.
-      <br/>
-      Please also see
-      the <a href="{{page.root}}/lessons/index.html">index to our lessons</a>
-      and the <a href="{{page.root}}/lessons/setup.html">index to setup instructions</a>.
-  </em></strong></p>
-</div>
 {% include bootcamps/instructors.html %}
 {% include bootcamps/what.html %}
 {% include bootcamps/who.html %}
