--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@ startdate: 2014-03-17
 enddate: 2014-03-18
 latlng: 40.729513,-73.996461
 registration: restricted
-instructor: ["Sarah Supp", "Tracy Teal", "Alex Viana"]
+instructor: ["Sarah Supp", "Tracy Teal", "Alex Viana", "Erik Bray", "Matthew Lightman"]
 contact: admin@software-carpentry.org
 ---
 {% include bootcamps/instructors.html %}
