--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 layout: bootcamp
 root: .
 venue: New York University
-address: New York, NY
+address: 1 MetroTech Center, 19th Floor, Brooklyn and 4 Washington Place, 2nd Floor, New York
 country: United-States
 humandate: Mar 17-18, 2013
 humantime: 9:00 am - 4:30 pm
