Changed restriction status to "open".

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@ humantime: 9:00 am - 4:30 pm
 startdate: 2014-03-17
 enddate: 2014-03-18
 latlng: 40.729513,-73.996461
-registration: restricted
+registration: open
 instructor: ["Sarah Supp", "Tracy Teal", "Alex Viana", "Erik Bray", "Matthew Lightman"]
 contact: admin@software-carpentry.org
 ---
