Adding Eventbrite widget to bootcamp page

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@ startdate: 2014-03-17
 enddate: 2014-03-18
 latlng: 40.729513,-73.996461
 registration: open
+eventbrite: 10435144799
 instructor: ["Sarah Supp", "Tracy Teal", "Alex Viana", "Erik Bray", "Matthew Lightman"]
 contact: admin@software-carpentry.org
 ---
@@ -19,6 +20,7 @@ contact: admin@software-carpentry.org
 {% include bootcamps/requirements.html %}
 {% include bootcamps/python.html %}
 {% include bootcamps/contact.html %}
+{% include bootcamps/eventbrite.html %}
 
 <hr/>
 
