--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@ contact: admin@software-carpentry.org
   <div class="span6">
     {% include setup/overview-git.html %}
     {% include setup/overview-python.html %}
+    {% include setup/overview-r.html %}
   </div>
 </div>
 
