--- a/index.html
+++ b/index.html
@@ -11,7 +11,15 @@ enddate: 2014-03-18
 latlng: 40.729513,-73.996461
 registration: open
 eventbrite: 10435144799
-instructor: ["Sarah Supp", "Tracy Teal", "Alex Viana", "Erik Bray", "Matthew Lightman"]
+instructor: ["Erik Bray",
+             "Elena Glassman",
+             "Matthew Lightman",
+             "Michael Selik",
+             "Sarah Supp",
+             "Tracy Teal",
+             "Alex Viana",
+             "April Wright",
+             ]
 contact: admin@software-carpentry.org
 ---
 {% include bootcamps/instructors.html %}
