--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ root: .
 venue: New York University
 address: 1 MetroTech Center, 19th Floor, Brooklyn and 4 Washington Place, 2nd Floor, New York
 country: United-States
-humandate: Mar 17-18, 2013
+humandate: Mar 17-18, 2014
 humantime: 9:00 am - 4:30 pm
 startdate: 2014-03-17
 enddate: 2014-03-18
@@ -18,8 +18,7 @@ instructor: ["Erik Bray",
              "Sarah Supp",
              "Tracy Teal",
              "Alex Viana",
-             "April Wright",
-             ]
+             "April Wright"]
 contact: admin@software-carpentry.org
 ---
 {% include bootcamps/instructors.html %}
