add id=setup to header for Setup section for friendly linking

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@ contact: admin@software-carpentry.org
 
 <hr/>
 
-<h2>Setup</h2>
+<h2 id='setup'>Setup</h2>
 
 <div class="row-fluid">
   <div class="span6">
