clarify bootcamp locations

--- a/index.html
+++ b/index.html
@@ -2,7 +2,9 @@
 layout: bootcamp
 root: .
 venue: New York University
-address: 1 MetroTech Center, 19th Floor, Brooklyn and 4 Washington Place, 2nd Floor, New York
+address:
+  4 Washington Place, 2nd Floor, Manhattan (for Python) and<br/>
+  1 MetroTech Center, 19th Floor, Brooklyn (for R)
 country: United-States
 humandate: Mar 17-18, 2014
 humantime: 9:00 am - 4:30 pm
