add more location clarification and link to R room website

--- a/index.html
+++ b/index.html
@@ -26,6 +26,17 @@ contact: admin@software-carpentry.org
 
 <hr/>
 
+<h2>Locations</h2>
+<p>
+  Python will be at the Manhattan campus: 4 Washington Place, 2nd Floor.
+</p>
+<p>
+  R will be at the Brooklyn campus: 1 MetroTech Center, 19th Floor.
+  <br />Please refer to the
+  <a href='http://swcarpentry.github.io/2014-03-17-nyu-R/'>NYU R room's
+  webpage</a> for more details.
+</p>
+
 <h2 id='setup'>Setup</h2>
 
 <div class="row-fluid">
