putting in a place holder for links to python

--- a/index.html
+++ b/index.html
@@ -85,6 +85,12 @@ contact: admin@software-carpentry.org
     </ul>
   </div>
   <div class="span6">
+    <h3><a href="lessons/swc-shell/tutorial.html">Python</a></h3>
+    <ul>
+      <li>{% include guide-shell/intro/title.md %}</li>
+    </ul>
+  </div>
+  <div class="span6">
     <h3><a href="lessons/swc-db/tutorial.html">Databases</a></h3>
     <ul>
       <li>{% include guide-db/select/title.md %}</li>
