--- a/index.html
+++ b/index.html
@@ -92,6 +92,7 @@ contact: admin@software-carpentry.org
 	<li><a href="http://nbviewer.ipython.org/url/swcarpentry.github.io/2014-03-17-nyu/lessons/thw-python/flow-control/python_flow_control.ipynb">Flow Control</a></li>
 	<li><a href="http://nbviewer.ipython.org/url/swcarpentry.github.io/2014-03-17-nyu/lessons/thw-python/strings-io/tutorial.ipynb">Strings and File I/O</a></li>
 	<li><a href="http://nbviewer.ipython.org/url/swcarpentry.github.io/2014-03-17-nyu/lessons/thw-python/functions-and-modules/python_functions_and_modules.ipynb">Functions and Modules</a></li>
+	<li><a href="http://swcarpentry.github.io/2014-03-17-nyu/lessons/swc-setdict/tutorial.html">Sets and Dictionaries</a></li>
       </ul>
   </div>
   <div class="span6">
