Changed python topic links to be relative paths.

--- a/index.html
+++ b/index.html
@@ -87,12 +87,12 @@ contact: admin@software-carpentry.org
   <div class="span6">
     <h3>Python</h3>
     <ul>
-	<li><a href="http://nbviewer.ipython.org/url/swcarpentry.github.io/2014-03-17-nyu/lessons/thw-python/vars-types/variables.ipynb">Variables and Types</a></li>
-	<li><a href="http://nbviewer.ipython.org/url/swcarpentry.github.io/2014-03-17-nyu/lessons/thw-python/data-structures/data_structures.ipynb">Data Structures</a></li>
-	<li><a href="http://nbviewer.ipython.org/url/swcarpentry.github.io/2014-03-17-nyu/lessons/thw-python/flow-control/python_flow_control.ipynb">Flow Control</a></li>
-	<li><a href="http://nbviewer.ipython.org/url/swcarpentry.github.io/2014-03-17-nyu/lessons/thw-python/strings-io/tutorial.ipynb">Strings and File I/O</a></li>
-	<li><a href="http://nbviewer.ipython.org/url/swcarpentry.github.io/2014-03-17-nyu/lessons/thw-python/functions-and-modules/python_functions_and_modules.ipynb">Functions and Modules</a></li>
-	<li><a href="http://swcarpentry.github.io/2014-03-17-nyu/lessons/swc-setdict/tutorial.html">Sets and Dictionaries</a></li>
+	<li><a href="{{page.ipythonnotebook}}/{{page.raw}}/lessons/thw-python/vars-types/variables.ipynb">Variables and Types</a></li>
+	<li><a href="{{page.ipythonnotebook}}/{{page.raw}}/lessons/thw-python/data-structures/data_structures.ipynb">Data Structures</a></li>
+	<li><a href="{{page.ipythonnotebook}}/{{page.raw}}/lessons/thw-python/flow-control/python_flow_control.ipynb">Flow Control</a></li>
+	<li><a href="{{page.ipythonnotebook}}/{{page.raw}}/lessons/thw-python/strings-io/tutorial.ipynb">Strings and File I/O</a></li>
+	<li><a href="{{page.ipythonnotebook}}/{{page.raw}}/lessons/thw-python/functions-and-modules/python_functions_and_modules.ipynb">Functions and Modules</a></li>
+	<li><a href="lessons/swc-setdict/tutorial.html">Sets and Dictionaries</a></li>
       </ul>
   </div>
   <div class="span6">
