Defined some needed variables.

--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@ registration: open
 eventbrite: 10435144799
 instructor: ["Elena Glassman", "Matthew Lightman", "Michael Selik", "Sarah Supp", "Tracy Teal", "Alex Viana", "David Warde-Farley"]
 contact: admin@software-carpentry.org
+ipythonnotebook: http://nbviewer.ipython.org/urls
+raw: raw.github.com/swcarpentry/bc/gh-pages
 ---
 {% include bootcamps/instructors.html %}
 {% include bootcamps/what.html %}
