Added link for version control topic.

--- a/index.html
+++ b/index.html
@@ -87,6 +87,15 @@ raw: raw.github.com/swcarpentry/bc/gh-pages
     </ul>
   </div>
   <div class="span6">
+    <h3><a href="lessons/swc-git/tutorial.html">Version Control With Git</a></h3>
+    <ul>
+      <li>A Better Backup</li>
+      <li>Branching</li>
+      <li>Merging</li>
+      <li>Collaborating</li>
+    </ul>
+  </div>
+  <div class="span6">
     <h3>Python</h3>
     <ul>
 	<li><a href="{{page.ipythonnotebook}}/{{page.raw}}/lessons/thw-python/vars-types/variables.ipynb">Variables and Types</a></li>
