add link to etherpad

--- a/index.html
+++ b/index.html
@@ -130,6 +130,7 @@ raw: raw.github.com/swcarpentry/bc/gh-pages
 <h2>Reference Guides</h2>
 
 <ul>
+  <li><a href="https://etherpad.mozilla.org/nN0nMr0ZQo">The bootcamp Etherpad</a>
   <li><a href="{{page.root}}/lessons/ref/shell.html">The Unix Shell</a></li>
   <li><a href="{{page.root}}/lessons/ref/python.html">Python</a></li>
   <li><a href="{{page.root}}/lessons/ref/sql.html">SQL</a></li>
